# mars-gis

./: .env.example  .gitignore  Dockerfile  LICENSE  PHASE_3_IMPLEMENTATION_REPORT.md  PHASE_3_INTEGRATION_COMPLETE.md  PROJECT_COMPLETE.md  README.md  README_COMPLETE.md  cleanup-docker.sh  cleanup_duplicates.sh  cleanup_root.sh  cleanup_root_final.sh  comprehensive_test_generation.ipynb  comprehensive_test_suite.py  docker-compose-corrupted-backup.yml  docker-compose.override-backup.yml  docker-compose.override.yml  docker-compose.prod-redirect.yml  docker-compose.prod.yml  docker-compose.test-redirect.yml  docker-compose.test.yml  docker-compose.yml  docker_cleanup_log.md  execute_final_validation.py  execute_tests.py  final_comprehensive_test.py  final_docker_cleanup.sh  migrate_docker_cleanup.sh  pyproject.toml  pytest.ini  quick_cleanup.sh  requirements.txt  run.sh  run_comprehensive_tests.py  run_tests.py  run_validation.py  setup_dev.sh  start_server.sh  test_api.py  (+6 more)
.copilot/: settings.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  ci.yml
backend/: Dockerfile
components/: Mars3DGlobe.tsx
config/: .editorconfig  .env  cypress.config.ts
cypress/support/: commands.ts  e2e.ts
docker/: Dockerfile  Dockerfile-backup  Dockerfile-redirect  README.md  docker-compose-clean.yml  docker-compose.override-final.yml  docker-compose.override-redirect.yml  docker-compose.prod-backup.yml  docker-compose.prod-final.yml  docker-compose.test-backup.yml  docker-compose.test-final.yml  docker-compose.test.yml  docker-helper.sh
docker/compose/: docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
docs/: CANVAS_TO_OPENLAYERS_SUCCESS.md  CHANGELOG.md  COMPILATION_FIXES_COMPLETE.md  CONTRIBUTING.md  DESIGN.md  DOCKER_MIGRATION_SUMMARY.md  FEATURE-SHOWCASE.md  FINAL_REORGANIZATION_REPORT.md  INSTALLATION.md  MISSION-ACCOMPLISHED.md  NASA_OPENLAYERS_UPGRADE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_ORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  ROOT_DIRECTORY_CLEANUP_SUMMARY.md  START_GUI_DOCUMENTATION.md  TDD_COMPLETION_STATUS.md  TDD_FRAMEWORK.md  TESTING.md  TESTING_COMPLETE.md  TROUBLESHOOTING.md  iso29148-compliance-summary.md  kubernetes-overview.md  mars-gui-validation.md  mars-scientific-gui-guide.md  plan.md  plan_part3.md  project-summary.md  project_plan.md  project_plan_gui.html  project_plan_gui.md  reorganization_summary.md  requirements-specification-iso29148.md  testing-strategy.md
docs/reports/: COMPLETION_AUDIT_SUMMARY.md  PROGRESS_TRACKER_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_EXECUTIVE_SUMMARY.md  PROJECT_PROGRESS_TRACKER.md
frontend/: .eslintignore  Dockerfile  jest.config.js  nginx.conf  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/scripts/: copy-cesium.js
frontend/src/: App.css  App.tsx  index.css  index.tsx  setupTests.ts  test-mars-component.tsx
frontend/src/__mocks__/: server.ts
k8s/: deployment.yaml
monitoring/: alert_rules.yml  prometheus.yml
scripts/: clean_up.sh  demo-mars-gui.sh  deploy.sh  dev.sh  download_sample_data.py  init-db.sql  reorganize_project.py  run_migration.sh  setup_environment.py  start-gui.sh  tdd.sh  test-mars-api.sh  update_progress.py  validate-tdd.sh  validate_progress.py
scripts/testing/: quick_test_runner.py
scripts/validation/: direct_audit_execution.py  direct_validation.py  execute_completion_audit.py  run_completion_audit.py
src/mars_gis/: __init__.py  main.py
tasksync/: log.md  tasks.md
tests/: __init__.py  conftest.py  test_api.py  test_core.py  test_data_processing.py  test_end_to_end_workflows.py  test_geospatial.py  test_integration.py  test_integration_comprehensive.py  test_ml_models.py  test_project_completion.py  test_unit_backend.py
(+92 files in other folders)
